[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://src/UI/TransitionLayer/TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/MenuLayer/MenuController.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/ConfigurationLayer/Configuration.tscn" type="PackedScene" id=4]

[node name="MainGame" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuLayer" parent="." instance=ExtResource( 3 )]

[node name="ConfigurationLayer" parent="." instance=ExtResource( 4 )]
pause_mode = 2

[node name="TransitionLayer" parent="." instance=ExtResource( 2 )]
layer = 11

[connection signal="configuration_toggled" from="MenuLayer" to="ConfigurationLayer" method="toggle_configuration"]
[connection signal="game_exited" from="MenuLayer" to="." method="_on_game_exited"]
[connection signal="music_changed" from="MenuLayer" to="." method="_on_music_changed"]
